--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div class="container"></div>
+        <!-- Section 1 -->
+        <section class="section-1">
+            <h1 class="section-1-headng">
+                Web Developer
+            </h1>
+            <img src="images/osman-tzorta.jpeg" width="200" height="300" alt="Osman Tzorta" class="person-img"/>
+            <h3 class="person-name">Osman Tzorta</h3>
+            <a href="#" class="section-1-btn">Projects</a>
+        </section>
+        <!-- End of Section 1-->
     <script src="script.js"></script>
 </body>
 </html>
