Added Background and Centered Items
-BG added
-Fixed Bugs
-Aligned Images
-Added Style

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
 
-    <div class="container"></div>
+    <div class="container">
         <!-- Section 1 -->
         <section class="section-1">
-            <h1 class="section-1-headng">
+            <h1 class="section-1-heading">
                 Web Developer
             </h1>
             <img src="images/osman-tzorta.jpeg" width="200" height="300" alt="Osman Tzorta" class="person-img"/>
             <h3 class="person-name">Osman Tzorta</h3>
-            <a href="#" class="section-1-btn">Projects</a>
+            <a href="#" 
+            class="section-1-btn">Projects</a>
         </section>
+        </div>
         <!-- End of Section 1-->
     <script src="script.js"></script>
 </body>
