--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="section-1-heading">
                 Web Developer
             </h1>
-            <img src="images/osman-tzorta.jpeg" width="200" height="300" alt="Osman Tzorta" class="person-img"/>
+            <img src="images/osman-tzorta.PNG" alt="Osman Tzorta" class="person-img"/>
             <h3 class="person-name">Osman Tzorta</h3>
             <a href="#" 
             class="section-1-btn">Projects</a>
