--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <div class="container">
         <!-- Section 1 -->
-        <section class="section-1">
+        <section class="section-1 center">
             <h1 class="section-1-heading">
-                Web Developer
+                Game Developer
             </h1>
             <img src="images/osman-tzorta.PNG" alt="Osman Tzorta" class="person-img"/>
             <h3 class="person-name">Osman Tzorta</h3>
@@ -23,6 +23,15 @@
         </section>
         </div>
         <!-- End of Section 1-->
+
+        <!-- Navbar -->
+        <nav class="navbar center">
+            <a href="#" class="navbar-link">Home</a>
+            <a href="#" class="navbar-link">About</a>
+            <a href="#" class="navbar-link">Portfolio</a>
+            <a href="#" class="navbar-link">Contact</a>
+        </nav>
+        <!-- End of Navbar-->
     <script src="script.js"></script>
 </body>
 </html>
