--- a/index.html
+++ b/index.html
@@ -32,6 +32,60 @@
             <a href="#" class="navbar-link">Contact</a>
         </nav>
         <!-- End of Navbar-->
+
+        <!-- Section 2-->
+        <sectiion class="section-2">
+            <h1 class="section-2-heading">About Me</h1>
+            <div class="progress-bars-wrapper">
+                <div class="progress-bar">
+                    <p class="progress-text">
+                        HTML
+                        <span>40</span>%
+                    </p>
+                    <div class="div progress-percent"></div>
+                </div>
+                <div class="progress-bar">
+                    <p class="progress-text">
+                        CSS
+                        <span>20</span>%
+                    </p>
+                    <div class="div progress-percent"></div>
+                </div>
+                <div class="progress-bar">
+                    <p class="progress-text">
+                        JavaScript
+                        <span>15</span>%
+                    </p>
+                    <div class="div progress-percent"></div>
+                </div>
+                <div class="progress-bar">
+                    <p class="progress-text">
+                        C++
+                        <span>85</span>%
+                    </p>
+                    <div class="div progress-percent"></div>
+                </div>
+            </div>
+            <div class="services">
+                <div class="service">
+                    <i class="far fa-lightbulb"></i>
+                    <h2 class="service-heading">Creative</h2>
+                </div>
+                <div class="service">
+                    <i class="fas fa-cut"></i>
+                    <h2 class="service-heading">Problem Solving</h2>
+                </div>
+                <div class="service">
+                    <i class="fas fa-tachometer-alt"></i>
+                    <h2 class="service-heading">Fast</h2>
+                </div>
+                <div class="service">
+                    <i class="fas fa-rocket"></i>
+                    <h2 class="service-heading">Dynamic</h2>
+                </div>
+            </div>
+        </sectiion>
+        <!-- End of Section 2-->
     <script src="script.js"></script>
 </body>
 </html>
