Added Projects Aligned Items

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!-- Section 2-->
         <sectiion class="section-2">
-            <h1 class="section-2-heading">About Me</h1>
+            <h1 class="section-heading section-2-heading">About Me</h1>
             <div class="progress-bars-wrapper">
                 <div class="progress-bar">
                     <p class="progress-text">
@@ -86,6 +86,38 @@
             </div>
         </sectiion>
         <!-- End of Section 2-->
+
+        <!-- Section 3-->
+        <section class="section-3">
+            <h1 class="section-heading section-3-heading">My Projects</h1>
+            <div class="projects-wrapper center">
+                <div class="project">
+                    <div class="project-text">
+                        <h2 class="project-name">Website Creation</h2>
+                        <h4 class="project-technologies">HTML / CSS / JavaScript</h4>
+                    </div>
+                    <img src="images/project-1.png" width="600" height="315" class="project-img">
+                    <a href="https://github.com/otzorta/Github-Portfolio-Website" class="project-link" target="_blank">Go to Project</a>
+                </div>
+                <div class="project">
+                    <div class="project-text">
+                        <h2 class="project-name">Game Development</h2>
+                        <h4 class="project-technologies">Osman Tzorta</h4>
+                    </div>
+                    <img src="images/project-game.png" width="600" height="315" class="project-img">
+                    <a href="https://trojanhorse-studio.itch.io/pixel-souls" class="project-link" target="_blank">Play Game</a>
+                </div>
+                <div class="project">
+                    <div class="project-text">
+                        <h2 class="project-name">Streaming</h2>
+                        <h4 class="project-technologies">Kopikyatto</h4>
+                    </div>
+                    <img src="images/project-streaming.png" width="600" height="315" class="project-img">
+                    <a href="https://twitch.tv/Kopikyatto" class="project-link" target="_blank">Go to My Twitch</a>
+                </div>
+            </div>
+        </section>
+        <!-- End of Section 3-->
     <script src="script.js"></script>
 </body>
 </html>
