--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="container">
-        <!-- Section 1 -->
+        <!-- Section 1 (Home Page) -->
         <section class="section-1 center">
             <h1 class="section-1-heading">
                 Game Developer
@@ -33,7 +33,7 @@
         </nav>
         <!-- End of Navbar-->
 
-        <!-- Section 2-->
+        <!-- Section 2 (Progress Bars) -->
         <sectiion class="section-2">
             <h1 class="section-heading section-2-heading">About Me</h1>
             <div class="progress-bars-wrapper">
@@ -87,7 +87,7 @@
         </sectiion>
         <!-- End of Section 2-->
 
-        <!-- Section 3-->
+        <!-- Section 3 (Projects) -->
         <section class="section-3">
             <h1 class="section-heading section-3-heading">My Projects</h1>
             <div class="projects-wrapper center">
@@ -119,7 +119,7 @@
         </section>
         <!-- End of Section 3-->
 
-        <!-- Section 4-->
+        <!-- Section 4 (Contact Form) -->
         <section class="section-4">
             <h1 class="section-heading section-4-heading">Contact Me</h1>
             <form class="contact-form center">
@@ -130,6 +130,28 @@
             </form>
         </section>
         <!-- End of Section 4-->
+
+        <!-- Section 5 (Footer) -->
+        <footer class="section-5 center">
+            <div class="social-media">
+                <a href="#" class="social-media-link">
+                    <i class="fab fa-github-square"></i>
+                </a>
+                <a href="#" class="social-media-link">
+                    <i class="fab fa-youtube"></i>
+                </a>
+                <a href="#" class="social-media-link">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+                <a href="#" class="social-media-link">
+                    <i class="fab fa-instagram-square"></i>
+                </a>
+            </div>
+            <p class="copyright">
+                Copyright &copy; Osman Tzorta. All Rights Reserved
+            </p>
+        </footer>
+        <!-- End of Section 5 -->
     <script src="script.js"></script>
 </body>
 </html>
