--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <!-- Navbar -->
         <nav class="navbar center">
-            <a href="#section-1" class="navbar-link">Home</a>
-            <a href="#section-2" class="navbar-link">About</a>
-            <a href="#section-3" class="navbar-link">Portfolio</a>
-            <a href="#section-4" class="navbar-link">Contact</a>
+            <a href="#" class="navbar-link">Home</a>
+            <a href="#" class="navbar-link">About</a>
+            <a href="#" class="navbar-link">Portfolio</a>
+            <a href="#" class="navbar-link">Contact</a>
         </nav>
         <!-- End of Navbar-->
 
@@ -134,16 +134,16 @@
         <!-- Section 5 (Footer) -->
         <footer class="section-5 center">
             <div class="social-media">
-                <a href="#" class="social-media-link">
+                <a href="#none" class="social-media-link">
                     <i class="fab fa-github-square"></i>
                 </a>
-                <a href="#" class="social-media-link">
+                <a href="#none" class="social-media-link">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <a href="#" class="social-media-link">
+                <a href="#none" class="social-media-link">
                     <i class="fab fa-facebook-square"></i>
                 </a>
-                <a href="#" class="social-media-link">
+                <a href="#none" class="social-media-link">
                     <i class="fab fa-instagram-square"></i>
                 </a>
             </div>
@@ -152,6 +152,7 @@
             </p>
         </footer>
         <!-- End of Section 5 -->
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
