--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
         <!-- Section 5 (Footer) -->
         <footer class="section-5 center">
             <div class="social-media">
-                <a href="#none" class="social-media-link">
+                <a href="#" class="social-media-link">
                     <i class="fab fa-github-square"></i>
                 </a>
-                <a href="#none" class="social-media-link">
+                <a href="#" class="social-media-link">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <a href="#none" class="social-media-link">
+                <a href="#" class="social-media-link">
                     <i class="fab fa-facebook-square"></i>
                 </a>
-                <a href="#none" class="social-media-link">
+                <a href="#" class="social-media-link">
                     <i class="fab fa-instagram-square"></i>
                 </a>
             </div>
