--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <div class="container">
         <!-- Section 1 (Home Page) -->
-        <section class="section-1 center">
+        <section class="section-1 center" id="section-1">
             <h1 class="section-1-heading">
                 Game Developer
             </h1>
             <img src="images/osman-tzorta.PNG" alt="Osman Tzorta" class="person-img"/>
             <h3 class="person-name">Osman Tzorta</h3>
-            <a href="#"
+            <a href="#section-3"
             class="section-1-btn">Projects</a>
         </section>
         </div>
@@ -26,15 +26,15 @@
 
         <!-- Navbar -->
         <nav class="navbar center">
-            <a href="#" class="navbar-link">Home</a>
-            <a href="#" class="navbar-link">About</a>
-            <a href="#" class="navbar-link">Portfolio</a>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="#section-1" class="navbar-link">Home</a>
+            <a href="#section-2" class="navbar-link">About</a>
+            <a href="#section-3" class="navbar-link">Portfolio</a>
+            <a href="#section-4" class="navbar-link">Contact</a>
         </nav>
         <!-- End of Navbar-->
 
         <!-- Section 2 (Progress Bars) -->
-        <sectiion class="section-2">
+        <sectiion class="section-2" id="section-2">
             <h1 class="section-heading section-2-heading">About Me</h1>
             <div class="progress-bars-wrapper">
                 <div class="progress-bar">
@@ -88,7 +88,7 @@
         <!-- End of Section 2-->
 
         <!-- Section 3 (Projects) -->
-        <section class="section-3">
+        <section class="section-3" id="section-3">
             <h1 class="section-heading section-3-heading">My Projects</h1>
             <div class="projects-wrapper center">
                 <div class="project">
@@ -120,7 +120,7 @@
         <!-- End of Section 3-->
 
         <!-- Section 4 (Contact Form) -->
-        <section class="section-4">
+        <section class="section-4" id="section-4">
             <h1 class="section-heading section-4-heading">Contact Me</h1>
             <form class="contact-form center">
                 <input type="text" placeholder="Name">
@@ -134,16 +134,16 @@
         <!-- Section 5 (Footer) -->
         <footer class="section-5 center">
             <div class="social-media">
-                <a href="#" class="social-media-link">
+                <a href="#none" class="social-media-link">
                     <i class="fab fa-github-square"></i>
                 </a>
-                <a href="#" class="social-media-link">
+                <a href="#none" class="social-media-link">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <a href="#" class="social-media-link">
+                <a href="#none" class="social-media-link">
                     <i class="fab fa-facebook-square"></i>
                 </a>
-                <a href="#" class="social-media-link">
+                <a href="#none" class="social-media-link">
                     <i class="fab fa-instagram-square"></i>
                 </a>
             </div>
