--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- End of Navbar-->
 
         <!-- Section 2 (Progress Bars) -->
-        <sectiion class="section-2" id="section-2">
+        <section class="section-2" id="section-2">
             <h1 class="section-heading section-2-heading">About Me</h1>
             <div class="progress-bars-wrapper">
                 <div class="progress-bar">
@@ -61,7 +61,7 @@
                 <div class="progress-bar">
                     <p class="progress-text">
                         C++
-                        <span>85</span>%
+                        <span>70</span>%
                     </p>
                     <div class="div progress-percent"></div>
                 </div>
