--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
                 <div class="progress-bar">
                     <p class="progress-text">
                         HTML
-                        <span>40</span>%
+                        <span></span>%
                     </p>
                     <div class="div progress-percent"></div>
                 </div>
                 <div class="progress-bar">
                     <p class="progress-text">
                         CSS
-                        <span>20</span>%
+                        <span></span>%
                     </p>
                     <div class="div progress-percent"></div>
                 </div>
                 <div class="progress-bar">
                     <p class="progress-text">
                         JavaScript
-                        <span>15</span>%
+                        <span></span>%
                     </p>
                     <div class="div progress-percent"></div>
                 </div>
                 <div class="progress-bar">
                     <p class="progress-text">
                         C++
-                        <span>70</span>%
+                        <span></span>%
                     </p>
                     <div class="div progress-percent"></div>
                 </div>
