--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
             <a href="#section-3"
             class="section-1-btn">Projects</a>
         </section>
-        </div>
+    </div>
         <!-- End of Section 1-->
 
         <!-- Navbar -->
@@ -84,7 +84,7 @@
                     <h2 class="service-heading">Dynamic</h2>
                 </div>
             </div>
-        </sectiion>
+        </section>
         <!-- End of Section 2-->
 
         <!-- Section 3 (Projects) -->
@@ -151,7 +151,6 @@
                 Copyright &copy; Osman Tzorta. All Rights Reserved
             </p>
         </footer>
-    </div>
         <!-- End of Section 5 -->
     <script src="script.js"></script>
 </body>
